	* [spreadsheet] data manipulation: add/subtract/multiply/divide for column values
	* [spreadsheet] export to SQLite
	* [worksheet] Allow to specify different border shapes for labels (rectangle, elipse, etc.)
	* Allow to connect to SQL databases via ODBC
	* Improved import of NetCDF files

Bug fixes:
	* Fixed several problems in live data support
	* [spreadsheet] properly calculate function values out of integer x-values
	* [matrix] fix editing integer values
	* [import] fix preview update and add missing close of netcdf files
	* Don't crash when a scaling factor equal to zero was set for axis

-----2.5-----
New features:
	* Support for reading and plotting of live-data
	* Improved data fitting
		* Automatically guess parameter of custom models
		* Better result presentation
		* Support different weight types
		* Consider given x- and y-error when fitting (can be switched off)
		* Show t statistics, P > |t| and confidence interval
		* Calculate p-value for chi-square and F test in nonlinear fitting
		* added fit models for most statistical distributions
	* Improved theming
		* Apply themes to worksheet and to all its children
		* Respect theme settings also in plot legends and labels
		* Allow to disable theming in worksheets and plots after a theme was selected
		* Show currently active theme in the "Apply theme" button
		* New application option in the settings for the default theme used for new worksheets.
	* Support different data types
		* auto detect integer and datetime data in import
		* support number locale and datetime formats
		* improved data type support in spreadsheets
	* Import from SQL databases (tables or custom queries)
	* Import Origin OPJ projects
	* Much better support for Windows and macOS
	* Syntax highlighting for LaTeX in the text label
	* Allow to set the background color for LaTeX labels
	* Support Hermite polynomials from GSL 2.4
	* Support error functions and related functions from libcerf