@@ -16,6 +16,7 @@ New features:
 	* [worksheet] Allow to specify different border shapes for labels (rectangle, elipse, etc.)
 	* Allow to connect to SQL databases via ODBC
 	* Improved import of NetCDF files
+	* Allow to make plots not-interactive (ignore mouse drag and wheel events) to avoid unwanted ocasional panning and zooming
 
 Bug fixes:
 	* Fixed several problems in live data support
